--- a/vercel.json
+++ b/vercel.json
@@ -1,8 +1,9 @@
 {
-  "buildCommand": "cd my-app && npm run build",
+  "$schema": "https://openapi.vercel.sh/vercel.json",
+  "buildCommand": "cd my-app && pnpm run build",
   "outputDirectory": "my-app/.next",
-  "installCommand": "cd my-app && npm install",
-  "framework": "nextjs",
+  "installCommand": "cd my-app && pnpm install",
+  "framework": null,
   "rootDirectory": "my-app"
 }
 
