Fix vercel.json schema validation error
- Remove rootDirectory property (not supported in vercel.json)
- Root directory should be set in Vercel Dashboard instead
- Fix schema validation error

--- a/vercel.json
+++ b/vercel.json
@@ -3,7 +3,6 @@
   "buildCommand": "cd my-app && pnpm run build",
   "outputDirectory": "my-app/.next",
   "installCommand": "cd my-app && pnpm install",
-  "framework": null,
-  "rootDirectory": "my-app"
+  "framework": null
 }
 
