Fix pnpm ERR_INVALID_THIS error - Switch to npm
- Change from pnpm to npm in vercel.json (more stable on Vercel)
- Remove installCommand (Vercel auto-detects package manager)
- Fix ERR_INVALID_THIS error in Vercel build

--- a/vercel.json
+++ b/vercel.json
@@ -1,8 +1,7 @@
 {
   "$schema": "https://openapi.vercel.sh/vercel.json",
-  "buildCommand": "cd my-app && pnpm run build",
+  "buildCommand": "cd my-app && npm run build",
   "outputDirectory": "my-app/.next",
-  "installCommand": "cd my-app && pnpm install",
   "framework": null
 }
 
