Fix package.json not found error
- Add 'cd my-app &&' to installCommand and buildCommand
- Fix outputDirectory path to 'my-app/.next'
- Resolve ENOENT error when Vercel can't find package.json
- Ensure commands run in correct directory

--- a/vercel.json
+++ b/vercel.json
@@ -1,8 +1,8 @@
 {
   "$schema": "https://openapi.vercel.sh/vercel.json",
-  "buildCommand": "npm run build",
-  "outputDirectory": ".next",
-  "installCommand": "npm install",
+  "buildCommand": "cd my-app && npm run build",
+  "outputDirectory": "my-app/.next",
+  "installCommand": "cd my-app && npm install",
   "framework": null
 }
 
