--- a/vercel.json
+++ b/vercel.json
@@ -2,7 +2,6 @@
   "$schema": "https://openapi.vercel.sh/vercel.json",
   "buildCommand": "cd my-app && npm run build",
   "outputDirectory": "my-app/.next",
-  "installCommand": "cd my-app && npm install",
-  "framework": null
+  "installCommand": "cd my-app && npm install"
 }
 
